Добавил перегрузку и доработал RegisterBus: типизированные опции и возможность задать коллбэк при переподключении к Rabbit. Доработал тест с учетом переподключения

--- a/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Consumer/Dex.MassTransit.Sample.Consumer.csproj
+++ b/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Consumer/Dex.MassTransit.Sample.Consumer.csproj
@@ -16,4 +16,10 @@
       <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Update="TestPasswordService.cs">
+        <DependentUpon>ITestService.cs</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
 </Project>
