--- a/src/Dex.MassTransit/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <Version>1.1.17</Version>
+    <Version>1.1.18</Version>
   </PropertyGroup>
   
   <!--Для NuGet-->
@@ -23,14 +23,13 @@
 
   <!-- Source debugging -->
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.0.0-develop.358" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Dex.Extensions" Version="1.0.11" />
-    <PackageReference Include="MassTransit.AmazonSQS" Version="7.2.2" />
-    <PackageReference Include="MassTransit.AspNetCore" Version="7.2.2" />
-    <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.2" />
+    <PackageReference Include="MassTransit.AmazonSQS" Version="8.0.0-develop.358" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
   </ItemGroup>
 
