--- a/src/Dex.Cap/Dex.Cap.AspNet.Test/Dex.Cap.AspNet.Test.csproj
+++ b/src/Dex.Cap/Dex.Cap.AspNet.Test/Dex.Cap.AspNet.Test.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="App.Metrics.AspNetCore.All" Version="4.3.0" />
+    <PackageReference Include="App.Metrics.Prometheus" Version="4.3.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
   </ItemGroup>
 
