Feature/refresh token mt8.0 (#58)
Add typed overload of methods in MassTransitConfigurator. Update MT packages. Remade tests

--- a/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Consumer/Dex.MassTransit.Sample.Consumer.csproj
+++ b/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Consumer/Dex.MassTransit.Sample.Consumer.csproj
@@ -18,7 +18,7 @@
 
     <ItemGroup>
       <Compile Update="TestPasswordService.cs">
-        <DependentUpon>ITestService.cs</DependentUpon>
+        <DependentUpon>ITestPasswordService.cs</DependentUpon>
       </Compile>
     </ItemGroup>
 
