Fix DataProtectionFactory bug - inject IDataProtectionProvider instead of DataProtectionProvider.Create. Only DI IDataProtectionProvider use the key store and DataProtection configuration from host application. Replace ServiceStack Redis client with StackExchange IDistributedCache.

--- a/src/Dex.SecurityToken/Tests/Dex.SecurityTokenProviderTests/Dex.SecurityTokenProviderTests.csproj
+++ b/src/Dex.SecurityToken/Tests/Dex.SecurityTokenProviderTests/Dex.SecurityTokenProviderTests.csproj
@@ -29,6 +29,7 @@
 
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Dex.SecurityToken.RedisStorage\Dex.SecurityToken.RedisStorage.csproj" />
       <ProjectReference Include="..\..\Dex.SecurityTokenProvider\Dex.SecurityTokenProvider.csproj" />
     </ItemGroup>
 
