--- a/src/Dex.Cap/Dex.Cap.ConsoleTest/appsettings.json
+++ b/src/Dex.Cap/Dex.Cap.ConsoleTest/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning",
+      "Dex": "Information",
+      "Microsoft.EntityFrameworkCore": "None"
     }
   },
   "ConnectionStrings": {
