fix minor bug, several processing of items, when several Outbox Handler is executing (multi process); test for concurrent processing has been written Dex.Cap.ConsoleTest;

--- a/src/Dex.Cap/Dex.Cap.ConsoleTest/appsettings.json
+++ b/src/Dex.Cap/Dex.Cap.ConsoleTest/appsettings.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
-      "Dex": "Information",
+      "Dex": "Trace",
       "Microsoft.EntityFrameworkCore": "None"
     }
   },
