--- a/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Consumer/Dex.MassTransit.Sample.Consumer.csproj
+++ b/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Consumer/Dex.MassTransit.Sample.Consumer.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <OutputType>Exe</OutputType>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,8 +13,8 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
-      <PackageReference Include="OpenTelemetry" Version="1.1.0" />
-      <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.1.0" />
+      <PackageReference Include="OpenTelemetry" Version="1.3.1" />
+      <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.3.1" />
     </ItemGroup>
 
     <ItemGroup>
