--- a/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Publisher/Dex.MassTransit.Sample.Publisher.csproj
+++ b/src/Dex.MassTransit/Tests/Dex.MassTransit.Sample.Publisher/Dex.MassTransit.Sample.Publisher.csproj
@@ -7,11 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.2-develop.430" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.6" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
-      <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.1.0" />
+      <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.3.1" />
     </ItemGroup>
 
     <ItemGroup>
