--- a/src/Dex.Neo4J/Dex.Neo4J.csproj
+++ b/src/Dex.Neo4J/Dex.Neo4J.csproj
@@ -2,17 +2,36 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <PackageTags>dex; buffer</PackageTags>
+        <Nullable>enable</Nullable>
+        <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+        <PackageVersion>1.0.25</PackageVersion>
     </PropertyGroup>
 
+    <!--Для NuGet-->
+    <PropertyGroup>
+        <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Authors>dex team</Authors>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
+    </PropertyGroup>
+    <!--/Для NuGet-->
+
     <ItemGroup>
-      <PackageReference Include="Dex.Extensions" Version="1.0.11" />
-      <PackageReference Include="Neo4jClient" Version="4.1.6" />
+        <PackageReference Include="Dex.Extensions" Version="1.0.11" />
+        <PackageReference Include="Neo4jClient" Version="4.1.26" />
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="BaseGraphFTIndexProvider.cs">
-        <DependentUpon>IGraphFTIndexProvider.cs</DependentUpon>
-      </Compile>
+        <Compile Update="BaseGraphFTIndexProvider.cs">
+            <DependentUpon>IGraphFTIndexProvider.cs</DependentUpon>
+        </Compile>
     </ItemGroup>
 
 </Project>
