dexcore nuget update (#67)
* fixed, restore serviceName parameter for RegisterConsumersEndpoint

* fixed warnings

* update nugets

* nuget version increment

* update nugets
update csproj files, set nuget versions
move editorconfig to root folder

--- a/src/Dex.MassTransit/Dex.MassTransit.ActivityTrace/Dex.MassTransit.ActivityTrace.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit.ActivityTrace/Dex.MassTransit.ActivityTrace.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <Version>1.0.3</Version>
+        <Version>1.0.25</Version>
     </PropertyGroup>
 
     <!--Для NuGet-->
@@ -22,7 +22,7 @@
     <!--/Для NuGet-->
 
     <ItemGroup>
-      <PackageReference Include="MassTransit" Version="8.0.2-develop.430" />
+      <PackageReference Include="MassTransit" Version="8.0.6" />
     </ItemGroup>
 
 </Project>
