--- a/src/Dex.Events/Tests/Dex.Events.Distributed.Tests/Dex.Events.Distributed.Tests.csproj
+++ b/src/Dex.Events/Tests/Dex.Events.Distributed.Tests/Dex.Events.Distributed.Tests.csproj
@@ -27,8 +27,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Dex.Events.DistributedEvents\Dex.Events.DistributedEvents.csproj" />
-      <ProjectReference Include="..\..\Dex.Events.OutboxDistributedEvents\Dex.Events.OutboxDistributedEvents.csproj" />
+      <ProjectReference Include="..\..\Dex.Events.Distributed\Dex.Events.Distributed.csproj" />
+      <ProjectReference Include="..\..\Dex.Events.Distributed.OutboxExtensions\Dex.Events.Distributed.OutboxExtensions.csproj" />
     </ItemGroup>
 
 </Project>
