--- a/src/Dex.Events/Dex.Events.Distributed.OutboxExtensions/Dex.Events.Distributed.OutboxExtensions.csproj
+++ b/src/Dex.Events/Dex.Events.Distributed.OutboxExtensions/Dex.Events.Distributed.OutboxExtensions.csproj
@@ -29,7 +29,7 @@
     <!--/Для NuGet-->
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Events.DistributedEvents\Dex.Events.DistributedEvents.csproj" />
+      <ProjectReference Include="..\Dex.Events.Distributed\Dex.Events.Distributed.csproj" />
     </ItemGroup>
 
 </Project>
