pass activity to MT header

--- a/src/Dex.MassTransit/Dex.MassTransit.ActivityTrace/Dex.MassTransit.ActivityTrace.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit.ActivityTrace/Dex.MassTransit.ActivityTrace.csproj
@@ -23,6 +23,7 @@
 
     <ItemGroup>
       <PackageReference Include="MassTransit" Version="8.0.6" />
+      <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
