fix, register ReceiveEndpoint serviceName generation when null value passed

--- a/src/Dex.MassTransit/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit.SQS/Dex.MassTransit.SQS.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <Version>1.1.25</Version>
+    <Version>1.1.26</Version>
   </PropertyGroup>
   
   <!--Для NuGet-->
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Dex.MassTransit.ActivityTrace\Dex.MassTransit.ActivityTrace.csproj" />
+    <ProjectReference Include="..\Dex.MassTransit\Dex.MassTransit.csproj" />
   </ItemGroup>
 
 </Project>
