--- a/src/Dex.MassTransit/Dex.MassTransit.Rabbit/Dex.MassTransit.Rabbit.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit.Rabbit/Dex.MassTransit.Rabbit.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <Version>1.1.25</Version>
+    <Version>1.1.26</Version>
   </PropertyGroup>
 
   <!--Для NuGet-->
@@ -40,6 +40,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Dex.MassTransit.ActivityTrace\Dex.MassTransit.ActivityTrace.csproj" />
+    <ProjectReference Include="..\Dex.MassTransit\Dex.MassTransit.csproj" />
   </ItemGroup>
   
 </Project>
