feat: add cache services, changing dependencies

--- a/src/Dex.DistributedCache/Dex.DistributedCache.csproj
+++ b/src/Dex.DistributedCache/Dex.DistributedCache.csproj
@@ -17,6 +17,9 @@
       <Compile Update="Services\CacheDependencyFactory.cs">
         <DependentUpon>ICacheDependencyFactory.cs</DependentUpon>
       </Compile>
+      <Compile Update="Services\CacheActionFilterService.cs">
+        <DependentUpon>ICacheActionFilterService.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
     <ItemGroup>
