--- a/src/Dex.DistributedCache/Dex.DistributedCache.csproj
+++ b/src/Dex.DistributedCache/Dex.DistributedCache.csproj
@@ -5,14 +5,42 @@
         <Nullable>enable</Nullable>
         <AssemblyName>Dex.DistributedCache</AssemblyName>
         <RootNamespace>Dex.DistributedCache</RootNamespace>
+        <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+        <PackageVersion>1.0.0</PackageVersion>
+        <PackageTags>distributed cache</PackageTags>
     </PropertyGroup>
+
+    <!--Для NuGet-->
+    <PropertyGroup>
+        <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Authors>dex team</Authors>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.0" />
+    </ItemGroup>
+    <!--/Для NuGet-->
 
     <ItemGroup>
       <Compile Update="Services\CacheService.cs">
         <DependentUpon>ICacheService.cs</DependentUpon>
       </Compile>
       <Compile Update="Services\CacheUserVariableFactory.cs">
-        <DependentUpon>ICacheUserVariableFactory.cs</DependentUpon>
+        <DependentUpon>ICacheVariableKeyFactory.cs</DependentUpon>
       </Compile>
       <Compile Update="Services\CacheDependencyFactory.cs">
         <DependentUpon>ICacheDependencyFactory.cs</DependentUpon>
@@ -20,17 +48,9 @@
       <Compile Update="Services\CacheActionFilterService.cs">
         <DependentUpon>ICacheActionFilterService.cs</DependentUpon>
       </Compile>
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-      <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-      <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.0" />
+      <Compile Update="Services\ICacheUserVariableKey.cs">
+        <DependentUpon>ICacheVariableKey.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
