--- a/src/Dex.DistributedCache/Dex.DistributedCache.csproj
+++ b/src/Dex.DistributedCache/Dex.DistributedCache.csproj
@@ -7,7 +7,7 @@
         <RootNamespace>Dex.DistributedCache</RootNamespace>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <PackageVersion>1.0.0</PackageVersion>
-        <PackageTags>distributed cache</PackageTags>
+        <PackageTags>response cache, etag specification, cache-control, distributed cache</PackageTags>
     </PropertyGroup>
 
     <!--Для NuGet-->
@@ -23,37 +23,41 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-        <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-        <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.0" />
-    </ItemGroup>
     <!--/Для NuGet-->
+    
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5"/>
+        <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0"/>
+        <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.0"/>
+    </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Services\CacheService.cs">
-        <DependentUpon>ICacheService.cs</DependentUpon>
-      </Compile>
-      <Compile Update="Services\CacheUserVariableFactory.cs">
-        <DependentUpon>ICacheVariableKeyFactory.cs</DependentUpon>
-      </Compile>
-      <Compile Update="Services\CacheDependencyFactory.cs">
-        <DependentUpon>ICacheDependencyFactory.cs</DependentUpon>
-      </Compile>
-      <Compile Update="Services\CacheActionFilterService.cs">
-        <DependentUpon>ICacheActionFilterService.cs</DependentUpon>
-      </Compile>
-      <Compile Update="Services\ICacheUserVariableKey.cs">
-        <DependentUpon>ICacheVariableKey.cs</DependentUpon>
-      </Compile>
-      <Compile Update="Services\ICacheLocaleVariableKey.cs">
-        <DependentUpon>ICacheVariableKey.cs</DependentUpon>
-      </Compile>
+        <Compile Update="Services\CacheService.cs">
+            <DependentUpon>ICacheService.cs</DependentUpon>
+        </Compile>
+        <Compile Update="Services\CacheUserVariableFactory.cs">
+            <DependentUpon>ICacheVariableKeyFactory.cs</DependentUpon>
+        </Compile>
+        <Compile Update="Services\CacheDependencyFactory.cs">
+            <DependentUpon>ICacheDependencyFactory.cs</DependentUpon>
+        </Compile>
+        <Compile Update="Services\CacheActionFilterService.cs">
+            <DependentUpon>ICacheActionFilterService.cs</DependentUpon>
+        </Compile>
+        <Compile Update="Services\ICacheUserVariableKey.cs">
+            <DependentUpon>ICacheVariableKey.cs</DependentUpon>
+        </Compile>
+        <Compile Update="Services\ICacheLocaleVariableKey.cs">
+            <DependentUpon>ICacheVariableKey.cs</DependentUpon>
+        </Compile>
+        <Compile Update="Services\ICacheManagementService.cs">
+            <DependentUpon>ICacheService.cs</DependentUpon>
+        </Compile>
     </ItemGroup>
 
 </Project>
