rename TokenRedisStorageProvider=>DistributedTokenStorageProvider; add InMemoryTokenInfoStorage, for simple usage; add AddSecurityTokenProvider() overload;
BREAKING - AddSecurityTokenProvider, now without generic argument, need register separate; by default InMemoryTokenInfoStorage will be register automatic

--- a/src/Dex.SecurityToken/Tests/Dex.SecurityTokenProviderTests/Dex.SecurityTokenProviderTests.csproj
+++ b/src/Dex.SecurityToken/Tests/Dex.SecurityTokenProviderTests/Dex.SecurityTokenProviderTests.csproj
@@ -29,7 +29,7 @@
 
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Dex.SecurityToken.RedisStorage\Dex.SecurityToken.RedisStorage.csproj" />
+      <ProjectReference Include="..\..\Dex.SecurityToken.DistributedStorage\Dex.SecurityToken.DistributedStorage.csproj" />
       <ProjectReference Include="..\..\Dex.SecurityTokenProvider\Dex.SecurityTokenProvider.csproj" />
     </ItemGroup>
 
