--- a/src/Dex.Ef/Dex.Ef.csproj
+++ b/src/Dex.Ef/Dex.Ef.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-        <PackageVersion>1.0.25</PackageVersion>
+        <PackageVersion>1.1.25</PackageVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
@@ -23,6 +23,6 @@
     <!--/Для NuGet-->
     
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.11" />
     </ItemGroup>
 </Project>
