--- a/src/Dex.Lock/Dex.Lock.Database/Dex.Lock.Database.csproj
+++ b/src/Dex.Lock/Dex.Lock.Database/Dex.Lock.Database.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <PackageTags>dex; database lock</PackageTags>
         <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
         <Copyright>dex</Copyright>
@@ -12,14 +12,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
+        <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="6.0.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Lock\Dex.Lock.csproj" />
+        <ProjectReference Include="..\Dex.Lock\Dex.Lock.csproj"/>
     </ItemGroup>
 
 </Project>
