--- a/src/Dex.Lock/Dex.Lock.Redis/Dex.Lock.Redis.csproj
+++ b/src/Dex.Lock/Dex.Lock.Redis/Dex.Lock.Redis.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <PackageTags>dex; redis lock</PackageTags>
         <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
         <Copyright>dex</Copyright>
@@ -15,11 +15,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
+      <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="6.0.0">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
+      <PackageReference Include="StackExchange.Redis" Version="2.6.70" />
     </ItemGroup>
 
 </Project>
