--- a/src/Dex.SecurityToken/Dex.SecurityToken.DistributedStorage/Dex.SecurityToken.DistributedStorage.csproj
+++ b/src/Dex.SecurityToken/Dex.SecurityToken.DistributedStorage/Dex.SecurityToken.DistributedStorage.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>default</LangVersion>
-        <PackageVersion>1.0.1</PackageVersion>
-        <PackageTags>security token management, redis storage</PackageTags>
+        <PackageVersion>1.2.1</PackageVersion>
+        <PackageTags>security token management, distributed storage</PackageTags>
     </PropertyGroup>
     
     <!--Для NuGet-->
