--- a/src/Dex.Specification/Dex.Specifications.EntityFramework/Dex.Specifications.EntityFramework.csproj
+++ b/src/Dex.Specification/Dex.Specifications.EntityFramework/Dex.Specifications.EntityFramework.csproj
@@ -2,20 +2,29 @@
 
     <PropertyGroup>
         <PackageTags>dex;specifications;entityframework</PackageTags>
-        <RepositoryUrl>https://github.com/dex-it/dex-common</RepositoryUrl>
-        <Copyright>dex</Copyright>
-        <PackageProjectUrl>https://github.com/dex-it/dex-common/projects/1</PackageProjectUrl>
-        <RepositoryType>github</RepositoryType>
         <TargetFramework>netstandard2.1</TargetFramework>
+        <Version>1.0.10</Version>
     </PropertyGroup>
-
+    <!--Для NuGet-->
+    <PropertyGroup>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Authors>dex team</Authors>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
+    </PropertyGroup>
+    <!--/Для NuGet-->
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Specifications\Dex.Specifications.csproj" />
+        <ProjectReference Include="..\Dex.Specifications\Dex.Specifications.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Dex.Extensions" Version="1.0.11" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+        <PackageReference Include="Dex.Extensions" Version="1.0.11"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5"/>
     </ItemGroup>
 
 </Project>
