--- a/src/Dex.Specification/Dex.Specifications/Dex.Specifications.csproj
+++ b/src/Dex.Specification/Dex.Specifications/Dex.Specifications.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <PackageTags>dex;specifications</PackageTags>
     <Nullable>enable</Nullable>
-    <Version>1.1.11</Version>
+    <Version>1.0.12</Version>
   </PropertyGroup>
 
   <!--Для NuGet-->
