--- a/src/Dex.Cap/Dex.Cap.AspNet.Test/Dex.Cap.AspNet.Test.csproj
+++ b/src/Dex.Cap/Dex.Cap.AspNet.Test/Dex.Cap.AspNet.Test.csproj
@@ -6,10 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.4.0-beta.3" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.9" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dex.Cap.ConsoleTest\Dex.Cap.ConsoleTest.csproj" />
     <ProjectReference Include="..\Dex.Cap.Outbox.Ef\Dex.Cap.Outbox.Ef.csproj" />
     <ProjectReference Include="..\Dex.Cap.Outbox.QuartzHandler\Dex.Cap.Outbox.AspNetScheduler.csproj" />
   </ItemGroup>
