review cleanup, move to raw sql

--- a/src/Dex.Cap/Dex.Cap.Outbox.Ef/Dex.Cap.Outbox.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox.Ef/Dex.Cap.Outbox.Ef.csproj
@@ -6,6 +6,7 @@
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <PackageVersion>1.4.28</PackageVersion>
     <PackageTags>outbox business-transaction consistency EF implementation</PackageTags>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <!--Для NuGet-->
