idempotent handler test sample

--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
@@ -32,7 +32,7 @@
 
 	<ItemGroup>
 		<Compile Update="OnceExecutorEf.cs">
-			<DependentUpon>IOnceExecutorEntityFramework.cs</DependentUpon>
+			<DependentUpon>IOnceExecutorEf.cs</DependentUpon>
 		</Compile>
 	</ItemGroup>
 
